force-app/main/default/objects/Training_Attendee__c/Training_Attendee__c.object-meta.xml
<CustomObject>
    <description>Attendees registered to the training.</description>
    <label>Training Attendee</label>
    <nameField>
        <displayFormat>TCR-ATT-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>