force-app/main/default/objects/Training_Attendee__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>L_TC_Contact__r.I_RS_Full_Name__c</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>