force-app/main/default/objects/Training_Attendee__c/fields/L_TC_Attendance__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Attendance__c</fullName>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
                <default>true</default>
                <label>Enrolled</label>
            </value>
            <value>
                <fullName>In attendance</fullName>
            </value>
            <value>
                <fullName>Apology</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>