force-app/main/default/objects/Training_Attendee__c/fields/L_TC_Booked__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Booked__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Booked for Training</description>
    <label>Booked</label>
    <type>Checkbox</type>
</CustomField>