force-app/main/default/objects/Training_Attendee__c/fields/L_TC_Contact__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Contact_Attendee_Relations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>