force-app/main/default/objects/Training_Attendee__c/fields/L_TC_Email__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Email__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <description>Training Attendee Email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>