force-app/main/default/objects/Training_Attendee__c/fields/L_TC_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Full_Name__c</fullName>
    <formula>IF($User.ProfileId = &quot;00e7F000002pVYI&quot; || $User.ProfileId = &quot;00e4a000000Lrob&quot;, HYPERLINK($Setup.URL_Variable__c.I_RS_Internal_Base_URL__c&amp;&quot;/&quot;&amp; L_TC_Contact__r.Id ,  L_TC_Contact__r.FirstName + &quot; &quot; + L_TC_Contact__r.LastName, &apos;_self&apos;), HYPERLINK(&quot;/tracr/s/contact/&quot;&amp; L_TC_Contact__r.Id ,  L_TC_Contact__r.FirstName + &quot; &quot; + L_TC_Contact__r.LastName, &apos;_self&apos;))</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>