force-app/main/default/objects/Training_Attendee__c/fields/L_TC_Owner__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Owner__c</fullName>
    <formula>IF(L_TC_Contact__r.I_RS_Related_User__r.Id =  $User.Id , TRUE,FALSE)</formula>
    <label>Owner</label>
    <type>Checkbox</type>
</CustomField>