force-app/main/default/objects/Training_Attendee__c/fields/L_TC_Training__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training__c</fullName>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipName>Attendee_Relation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>