force-app/main/default/objects/Training_Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Contact__c</columns>
    <columns>L_TC_Full_Name__c</columns>
    <columns>L_TC_Attendance__c</columns>
    <columns>L_TC_Booked__c</columns>
    <columns>L_TC_Training__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>