force-app/main/default/objects/Training_Attendee__c/listViews/My_Trainings.listView-meta.xml
<ListView>
    <fullName>My_Trainings</fullName>
    <columns>L_TC_Training__c</columns>
    <columns>L_TC_Booked__c</columns>
    <columns>L_TC_Attendance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L_TC_Attendance__c</field>
        <operation>equals</operation>
        <value>Enrolled,In attendance</value>
    </filters>
    <filters>
        <field>L_TC_Booked__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>L_TC_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Trainings</label>
</ListView>